Massive improvements and re scheduling done

--- a/src/app/appointment-info/appointment-info.component.html
+++ b/src/app/appointment-info/appointment-info.component.html
@@ -1,4 +1,4 @@
-<div class="appointment-container" *ngIf="!EditingAppointment">
+<div class="appointment-container">
     <h1>{{ AppointmentInfo.AppointmentName }} Appointment for {{ AppointmentInfo.ClientFirstName }} {{ AppointmentInfo.ClientLastName }}</h1>
     <div class="appointment-details">
       <p><strong>Duration:</strong> {{ AppointmentInfo.AppointmentDurationInMinutes }} minutes</p>
@@ -6,31 +6,19 @@
       <p><strong>Date:</strong> {{ AppointmentInfo.AppointmentDate }}</p>
     </div>
   </div>
-  <button class="toggle-edit-btn" (click)="ReScheduleAppointment()">Re-schedule</button>
-  <button class="toggle-edit-btn" (click)="OpenEditView()">{{ CurrentViewText }}</button>
+  <button class="toggle-edit-btn" (click)="ReScheduleAppointment()" *ngIf="!ValidatingTime">Re-schedule</button>
   
-  <div class="edit-form-container" *ngIf="EditingAppointment">
+  <div class="edit-form-container" *ngIf="ValidatingTime">
     <p class="form-instruction">You can edit the following fields:</p>
     <form [formGroup]="Editingform" class="edit-form">
+
       <div class="form-group">
-        <label for="appointmentDate">Appointment Date</label>
-        <input class="input-field" [min]="EarliestDate" type="date" id="appointmentDate" name="date" formControlName="AppointmentDate" required>
-  
         <label for="appointmentTime">Appointment Time</label>
         <input class="input-field" type="time" id="appointmentTime" name="time" formControlName="AppointmentTime">
-  
-        <label for="appointmentType">Appointment Type</label>
-        <select id="appointmentType" class="input-field" (change)="SetAppointmentType($event)">
-          <option>-- Select --</option>
-          <option *ngFor="let a of apmnt.AvailableAppointments" [value]="a.AppointmentName">
-            {{ a.AppointmentName }}
-          </option>
-        </select>
-      </div>
-  
       <div class="form-buttons">
         <button type="button" class="cancel-btn" routerLink="/AppointmentsTimetable">Cancel</button>
-        <button class="save-btn" [disabled]="!ValidAppointment" (click)="SaveChanges()">Save</button>
+        <button class="save-btn" (click)="ValidateAppointmentTime()">Save</button>
+      </div>
       </div>
     </form>
   </div>
