Added error displays, and code cleanup

--- a/src/app/appointment-info/appointment-info.component.html
+++ b/src/app/appointment-info/appointment-info.component.html
@@ -1,3 +1,4 @@
+<app-error-display [OnNewError]="OnNewError"></app-error-display>
 <div class="appointment-container">
     <h1>{{ AppointmentInfo.AppointmentName }} Appointment for {{ AppointmentInfo.ClientFirstName }} {{ AppointmentInfo.ClientLastName }}</h1>
     <div class="appointment-details">
