--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,6 @@
 
 <form [formGroup]="SignUpform"  style="border:1px solid #ccc">
-
-
-	<div *ngIf="err" class="error">{{errorAlert}}</div>
+  <app-error-display [OnNewError]="OnNewError"></app-error-display>
 
     <div class="container"  align="center">
       <!--<div class="success" *ngIf="success">Success</div>-->
